# Vestigo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PR4_REVIEW_FINDINGS.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/clickhouse/: allow-default-network.xml
docs/: AGENT.md  ANOMALY_DETECTION.md  CONCEPT.md  DEPLOYMENT.md  DEPLOYMENT_NGINX.md  INPUT_FORMATS.md  MIGRATION_RENAME.md  MODEL_REFINEMENT.md  PLAN_ISSUES_5_10_11.md  PROGRESS.md  ROADMAP.md  TECH_STACK.md  nginx-tls.conf
docs/archive/: PLAN_FAST_NGINX_INGESTION.md  PLAN_ISSUES_5_10_11.md  PR8_REVIEW_FINDINGS.md  ROADMAP_PHASE1.md
docs/superpowers/specs/: 2026-07-19-agent-read-parity-mcp-http-design.md  2026-07-21-agent-tool-result-fidelity-design.md  2026-07-22-agent-sliding-window-design.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  App.vue  index.css  main.ts  router.tsx
frontend/src/api/: admin.ts  agent.ts  agentTokens.ts  annotations.ts  anomalies.ts  baselines.ts  cases.ts  client.ts  converters.ts  dispositions.ts  enrichers.ts  events.ts  export.ts  health.ts  jobs.ts  sigma.ts  similarity.ts  sources.ts  timelines.ts  types.ts  viz.ts
frontend/src/components/: CaseList.vue  UploadForm.vue
frontend/src/components/Explore/: EventDetail.vue  EventTable.vue  FieldRow.vue  FilterChips.vue
frontend/src/components/LeftPanel/: Anomalies.vue  SavedViews.vue
frontend/src/components/agent/: AgentPanel.tsx  ChartProposalCard.tsx  FindingCard.tsx  NewConversationDialog.tsx  ProposalCard.tsx  ToolSelector.tsx
frontend/src/components/analysis/: AnalysisPanel.tsx  AnomaliesList.tsx  AnomalyFieldPicker.tsx  BaselineBuilderDrawer.tsx  CharsetNoveltyView.tsx  ComboNoveltyView.tsx  DetectorAccordion.tsx  DetectorSummaryStrip.tsx  DistributionDriftView.tsx  (+19 more)
frontend/src/hooks/: useAnnotationMutations.ts  useCaseStream.ts  useDisposition.ts  useMarkNormal.ts
frontend/src/lib/: caseAccess.ts  download.ts  enrichment.ts  fieldFilters.ts  fieldSuggest.ts  glossary.ts  guidance.ts  queryParams.ts  routineCollapse.ts  session.ts  time.ts  tourSteps.ts  userNames.ts
frontend/src/pages/: CaseOverviewPage.tsx  CasesPage.tsx  ExplorerPage.tsx  LoginPage.tsx  SettingsPage.tsx  VisualizePage.tsx
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: agent.ts  app.ts  auth.ts  baseline.ts  jobs.ts  theme.ts  toasts.ts  ui.ts
frontend/src/test/: adminAgentModelPicker.test.tsx  agent.test.ts  agentPanelChart.test.tsx  agentPanelFidelity.test.tsx  agentPanelMarkers.test.tsx  chartConfig.test.ts  chartOptions.test.ts  chartProposalCard.test.tsx  columnPicker.test.tsx  dispositionIndicator.test.tsx  download.test.ts  explorerRoutineCollapse.test.tsx  fieldFilters.test.ts  fieldSuggest.test.ts  filterRail.test.tsx  guidancePanel.test.tsx  queryParams.test.ts  routineCollapse.test.ts  time.test.ts  toolSelectorPresets.test.tsx  tourStore.test.ts  useCaseStream.test.ts  useDisposition.test.tsx  useMarkNormal.test.tsx  vizCaption.test.ts  vizCharts.smoke.test.tsx  vizColors.test.ts  vizExplainers.test.ts  vizExport.test.ts  vizMarkRules.test.ts  vizStats.test.ts  vizTransforms.test.ts
frontend/src/views/: CaseDetailView.vue  CaseListView.vue  HomeView.vue  TimelineDetailView.vue
scripts/: gen_chart_meta.py  vendor_converters.py
src/tracesignal/: __init__.py
src/tracesignal/api/: deps.py  main.py  uploads.py
src/tracesignal/cli/: main.py  progress.py
src/tracesignal/core/: config.py  eta.py  events_bus.py  jobs.py  security.py
src/tracesignal/db/: _buckets.py  _dt.py  _scan.py  anomaly_stats.py  clickhouse.py  field_mappings.py  field_recommend.py  field_stats.py  postgres.py  qdrant.py  queries.py  similarity.py  viz_cache.py
src/tracesignal/enrichers/: base.py  geoip.py  jobs.py
src/tracesignal/ingestion/: __init__.py  files.py  parquet_reader.py  parser.py  pipeline.py
src/tracesignal/models/: __init__.py  embeddings.py  event.py
src/tracesignal/web/: app.py
src/tracevector/api/: main.py
src/tracevector/cli/: main.py
src/tracevector/core/: config.py  jobs.py
src/tracevector/db/: _buckets.py  _columns.py  _dt.py  anomaly_stats.py  clickhouse.py  field_recommend.py  postgres.py  qdrant.py  queries.py  similarity.py
src/tracevector/ingestion/: files.py  parser.py  pipeline.py
src/tracevector/models/: embeddings.py  event.py
src/tracevector/web/: app.py
src/vestigo/: __init__.py  stats.py
src/vestigo/agent/: __init__.py  availability.py  chart_meta.py  compaction.py  config.py  encoding.py  fidelity.py  mcp_http.py  runtime.py  schema_slim.py  tools.py  window.py
src/vestigo/api/: main.py
src/vestigo/cli/: main.py
src/vestigo/core/: config.py  jobs.py
src/vestigo/db/: _time_fields.py  anomaly_stats.py  clickhouse.py  field_mappings.py  field_recommend.py  postgres.py  queries.py
src/vestigo/ingestion/: parquet_format.py  pipeline.py
src/vestigo/sigma/: __init__.py  backend.py  rules.py  runner.py
tests/: conftest.py  test_admin_api.py  test_admin_enrichers_api.py  test_agent_api.py  test_agent_compaction.py  test_agent_encoding.py  test_agent_fidelity.py  test_agent_runtime.py  test_agent_schema.py  test_agent_tokens.py  test_agent_tools.py  test_agent_window.py  test_annotations.py  test_anomaly_stats.py  test_auth_api.py  test_baselines_api.py  test_buckets.py  test_chart_meta.py  test_cli.py  test_clickhouse_store.py  test_cloudtrail_converter.py  test_columns.py  test_compare_baseline_cache_clickhouse.py  test_converters_api.py  test_dispositions_api.py  test_dt.py  test_enrichers.py  test_events_router.py  test_field_mappings.py  test_field_mappings_clickhouse.py  test_field_recommend.py  test_field_stats.py  test_filterlog_converter.py  test_jobs.py  test_jobs_api.py  test_mcp_http.py  test_migration_0004.py  test_nginx_converter.py  test_novelty_batched_clickhouse.py  test_parquet_reader.py  (+24 more)
tests/data/: agent_payload_shape.py  gen_pcap_fixtures.py  stats_reference_scipy.json
(+165 files in other folders)
