[project]
name = "tracesignal"
version = "0.1.0"
description = "Local-first, forensic-grade log investigation platform with vector-backed anomaly detection."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }
authors = [
    { name = "ScalarForensic" },
]
keywords = ["forensics", "timeline", "log-analysis", "vector-search", "anomaly-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "typer>=0.26.8",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.13.0,<2.0.0",
    "clickhouse-connect>=0.8.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "torch>=2.2.0",
    "torchvision>=0.15.0",
    "sentence-transformers>=3.3.0",
    "onnxruntime>=1.20.0",
    "numpy>=2.1.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.0",
    "argon2-cffi>=23.1.0",
    "authlib>=1.3.2",
]

[project.scripts]
tsig = "tracesignal.cli.main:app"
tsig-web = "tracesignal.web.app:start"

[project.urls]
Homepage = "https://github.com/overcuriousity/TraceSignal"
Repository = "https://github.com/overcuriousity/TraceSignal"
Documentation = "https://github.com/overcuriousity/TraceSignal/blob/main/docs/CONCEPT.md"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracesignal"]

# --- UV package indexes ------------------------------------------------------
# Default: CPU-only PyTorch, so `uv sync` works out of the box on any machine
# with no GPU-specific setup ("plug and play"). This is fine for evaluation
# and for deployments that don't run the embedding pipeline.
# For production use of the embedding features (`tsig embed`, semantic search,
# similarity), switch to a GPU index below — embedding large timelines on CPU
# is significantly slower.
# Uncomment ONE GPU block below to enable acceleration. Both `[[tool.uv.index]]`
# entries must keep `explicit = true`, or uv will consider that index for ALL
# dependencies (not just torch/torchvision), which can pull incompatible
# transitive versions (e.g. an ancient urllib3 pin) instead of PyPI's.
# ROCm is the primary GPU target; CUDA is also supported.
# See https://docs.astral.sh/uv/concepts/projects/config/#project-indexes

# --- CPU-only PyTorch (default) ---
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

# --- AMD ROCm 6.4 (primary GPU target; recommended for production embedding workloads) ---
# [[tool.uv.index]]
# name = "pytorch-rocm64"
# url = "https://download.pytorch.org/whl/rocm6.4"
# explicit = true
#
# [tool.uv.sources]
# torch = { index = "pytorch-rocm64" }
# torchvision = { index = "pytorch-rocm64" }
# pytorch-triton-rocm = { index = "pytorch-rocm64" }
#
# NOTE: torch's own dependency on pytorch-triton-rocm is only resolved from
# this index if it's also a direct project dependency (uv doesn't route
# purely-transitive deps through `tool.uv.sources`). Also add, in
# [project.dependencies] above:
#   "pytorch-triton-rocm; sys_platform == 'linux'",

# --- NVIDIA CUDA 12.8 (secondary GPU target) ---
# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"
# explicit = true
#
# [tool.uv.sources]
# torch = { index = "pytorch-cu128" }
# torchvision = { index = "pytorch-cu128" }

[tool.ruff]
target-version = "py313"
# Vendored upstream code — re-generated by scripts/vendor_converters.py, do not lint.
extend-exclude = ["src/tracesignal/assets/converters"]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection pattern calls Depends()/Query()/etc. in
# argument defaults by design; these calls are evaluated once at route
# registration, not per-request, so B008's "don't call functions in
# defaults" concern doesn't apply here.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=tracesignal --cov-report=term-missing"
